# OpenRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  Core.lnk  Core.sln  LICENSE  README.md
Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  imgui.ini
Core/lib/Glad/: CMakeLists.txt
Core/lib/Glad/include/glad/: glad.h
Core/lib/Glad/src/: glad.c
Core/lib/ImGui/: CMakeLists.txt
Core/res/models/: sphere.fbx
Core/res/shaders/: defaultShader.glsl  modelShader.glsl  mvpShader.glsl  textureShader.glsl
Core/src/: Application.cpp  Application.h  Assets.h  Exception.cpp  Exception.h  Main.cpp  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Utils.h  model.embed
Core/src/App/: Input.cpp  Input.h  Window.cpp
Core/src/App/Events/: Event.h  KeyEvent.h  MouseButtonEvent.h  MouseMovedEvent.cpp  WindowCloseEvent.h  WindowResizeEvent.h
Core/src/Interface/: Abstractions.cpp  Abstractions.h  Buffers.cpp  Buffers.h  FrameBuffer.cpp  FrameBuffer.h
Core/src/Rendering/: Abstractions.cpp  Abstractions.h  Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  Components.h  FrameBuffer.cpp  FrameBuffer.h  Material.cpp  Material.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Serializer.cpp  Serializer.h
Core/src/System/: Input.cpp  Input.h  Window.cpp  Window.h
Core/src/System/Events/: Event.h  Events.h  MouseMovedEvent.h  MouseScrollEvent.h
Core/src/System/UI/: Panel.cpp  Panel.h  UserInterface.cpp  UserInterface.h
Core/src/UI/: EditorUI.cpp  EditorUI.h  Panel.cpp  Panel.h  UserInterface.cpp  UserInterface.h
Editor/: CMakeLists.txt
Editor/res/models/: scene.gltf
Editor/res/shaders/: default.glsl
Editor/scenes/: Scene1.yaml
Editor/src/: Application.cpp  Application.h
Editor/src/UI/: EditorUI.cpp  EditorUI.h  Panel.cpp  Panel.h  UI.cpp  UI.h
lib/ImGui/: CMakeLists.txt  imgui_impl_glfw.cpp
lib/TinyFileDialogs/: CMakeLists.txt
